config/participants/figmm/ingress.yaml

apiVersion: extensions/v1beta1 
kind: Ingress
metadata:
  name: ingress-figmm
  annotations:
    kubernetes.io/ingress.class: kong
spec:
  rules:
  # TODO: are these still valid?
    - host: figmm.beta.moja-lab.live
      http:
        paths:
          - path: /api
            backend:
              serviceName: figmm-ml-testing-toolkit-backend
              servicePort: 5050 
          - path: /
            backend:
              serviceName: figmm-ml-testing-toolkit-frontend
              servicePort: 6060
          - path: /socket.io/
            backend:
              serviceName: figmm-ml-testing-toolkit-backend
              servicePort: 5050

    - host: figmm-backend-fspiop.beta.moja-lab.live
      http:
        paths:
          - path: /(.*)
            backend:
              serviceName: figmm-ml-testing-toolkit-backend
              servicePort: 5000
